Prevent channel from overflowing

--- a/src/ui/views/main/components/channel/channel.scss
+++ b/src/ui/views/main/components/channel/channel.scss
@@ -9,6 +9,7 @@
     &__wrapper {
         height: 100%;
         display: flex;
+        overflow: hidden;
     }
 
     &__feed {
